# xor_aes_platform_benchmark

./: .gitignore  CMakeLists.txt  README.md  commands.md  main.tex  old.tex  prompt.txt
article/: bibliography.bib  main.aux  main.tex
results/: combined_results.csv  macos_results.csv
scripts/: Plot_Generator.ipynb  generate_block_size_chart.py  generate_charts.ipynb  generate_charts.py
src/: main.cpp
src/common/: csv_logger.cpp  csv_logger.hpp  file_utils.cpp  file_utils.hpp  power_monitor.cpp  power_monitor.hpp  timer.cpp  timer.hpp  verification.cpp  verification.hpp
src/engines/: i_cipher_engine.hpp
src/engines/aes/: aes_cuda.cu  aes_cuda.cuh  aes_metal.hpp  aes_metal.mm  aes_metal_kernel.metal  aes_opencl.cpp  aes_opencl.hpp  aes_openmp.cpp  aes_openmp.hpp  aes_sequential.cpp  aes_sequential.hpp
src/engines/xor/: xor_cuda.cu  xor_cuda.cuh  xor_metal.hpp  xor_metal.mm  xor_metal_kernel.metal  xor_opencl.cpp  xor_opencl.hpp  xor_opencl_kernel.cl  xor_openmp.cpp  xor_openmp.hpp  xor_sequential.cpp  xor_sequential.hpp
src/kernels/: aes_tables.hpp
